--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -6748,6 +6748,12 @@ th {
 body {
   background-color: white;
   font-family: "opensans-Light";
+  font-size: 14px;
+}
+@media (max-width: 1200px) {
+  body {
+    font-size: 11px;
+  }
 }
 body ul {
   margin: 0;
@@ -7329,8 +7335,6 @@ body,
 #landing #landing-preview {
   width: 960px;
   margin: 0 auto;
-  padding-bottom: 100px;
-  border-bottom: 1px solid #dddddd;
 }
 #landing #landing-preview div {
   width: 40%;
@@ -7367,7 +7371,19 @@ body,
   vertical-align: -0.4em;
 }
 #landing #landing-preview img {
+  display: block;
+  height: auto;
+  margin: 0;
   width: 100%;
+}
+#landing #landing-preview .screen-bezel {
+  background-color: #000;
+  border-radius: 12px;
+  overflow: hidden;
+  width: 100%;
+  display: block;
+  margin: 0;
+  padding: 26px;
 }
 #landing #landing-principles {
   width: 960px;
@@ -7703,4 +7719,35 @@ body,
 }
 .signup-div #signup-footer ul li:last-child:after {
   content: none;
+}
+/* ABOUT / HELP */
+#about,
+#help {
+  width: 700px;
+  font-size: 16px;
+  margin-left: 28px;
+  text-align: justify;
+  margin-bottom: 100px;
+}
+#about h2,
+#help h2 {
+  font-size: 26px;
+  color: #27ae60;
+}
+#about h3,
+#help h3 {
+  font-size: 22px;
+  color: #27ae60;
+}
+#about p,
+#help p {
+  margin-top: 20px;
+}
+#about a,
+#help a {
+  color: #27ae60;
+}
+#about a:hover,
+#help a:hover {
+  text-decoration: underline;
 }
