--- a/app/styles/styles.less
+++ b/app/styles/styles.less
@@ -1,6 +1,10 @@
 body {
 	background-color: white;
 	font-family: "opensans-Light";
+    font-size: 14px;
+    @media (max-width:1200px){ 
+        font-size: 11px;
+    }
 
 	ul{
 		margin: 0;
